[package]
name = "GreenshotSftp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.62"
clap = { version = "3.2.17", features = ["derive"] }
clipboard-win = "4.4.2"
msgbox = "0.7.0"
# openssl = { version = "0.10", features = ["vendored"] }
ssh2 = "0.9.3"
winrt-notification = "0.5.1"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"